--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=simple-telegram-bot
-bot.name=@TheCoonSimpleBot
-bot.token=7979131099:AAEGa0v2jqFLW5rYy_M5NXhi9LjOoNRX6HY
+bot.name=${BOT_NAME}
+bot.token=${BOT_TOKEN}
 
 logging.level.root=INFO
 logging.level.ua.thecoon.tgbot=DEBUG
